migrações e arrumando a base.html

--- a/vendas/templates/vendas/index.html
+++ b/vendas/templates/vendas/index.html
@@ -1,5 +1,4 @@
- {% extends "aluguel/base.html" %} {% block content %}
- <?php include"inc/header.php" ?>
+ {% extends "vendas/base.html" %} {% block content %}
   <section id="home">
     <div id="myCarousel" class="carousel slide" >
       <ol class="carousel-indicators">
