--- a/vendas/templates/vendas/index.html
+++ b/vendas/templates/vendas/index.html
@@ -82,7 +82,7 @@
               <img src="$caminhoImagem" class="foto-produto img-responsive" alt="foto de uma batata">
               <h3 class="preco">$preco<span class='kilo'>/kg</span></h3>
               <h3>Quantidade:</h3>
-              <select name="qtd" onchange="mudaQtd($id,$preco)" class="qtd form-control ">";
+              <select name="qtd" class="qtd form-control ">";
    <option value="0"></option>
                  <option value="1">1 kg</option>
                  <option value="2">2 kg</option>
@@ -90,7 +90,7 @@
               <option value="4">4 kg</option>
 </select>
              <h2 id="valorTotal" class="valorTotal"></h2>
-             <button class="btn-default botao carrinho" onclick="addCarrinho($id,$preco)">+ Adicionar ao carrinho</button>
+             <button class="btn-default botao carrinho">+ Adicionar ao carrinho</button>
           </article>
 
       <div class="container">
