--- a/vendas/templates/carrinho/exibe.html
+++ b/vendas/templates/carrinho/exibe.html
@@ -41,7 +41,7 @@
                                     {{ item.atualizar_quantidade_form.quantidade }}
                                     {{ item.atualizar_quantidade_form.atualizar }}
                                     <input class="btn btn-primary btn-sm" type="submit" value="Atualizar">
-                                    <a class="btn btn-danger btn-sm" href="{% url 'carrinho:remover_do_carrinho' %}">Remover</a>
+                                    <a class="btn btn-danger btn-sm" href="{% url 'carrinho:remover_do_carrinho' item.id %}">Remover</a>
                                     {% csrf_token %}
                                 </form>
                             </td>
