Carrinho funcionando. ok

--- a/vendas/templates/carrinho/exibe.html
+++ b/vendas/templates/carrinho/exibe.html
@@ -1,4 +1,4 @@
-{% extends "vendas/base.html" %}
+{% extends "vendas/base2.html" %}
 
 {% load static %}
 
@@ -58,7 +58,7 @@
                 </tbody>
             </table>
             <p class="text-right">
-                <a href="/" class="btn btn-primary">Continuar comprando</a>
+                <a href="/#menu" class="btn btn-primary">Continuar comprando</a>
             </p>
         </div>
     </div>
