--- a/vendas/templates/carrinho/exibe.html
+++ b/vendas/templates/carrinho/exibe.html
@@ -4,7 +4,7 @@
 
 
 {% block content %}
-    <div class="container">
+    <div class="container topo">
         <div class="row">
             <h3>Seu carrinho de compras</h3>
             <table class="table table-striped table-bordered table-responsive">
@@ -37,7 +37,7 @@
                             </td>
                             <td>{{ item.produto.nome }}</td>
                             <td class="fit">
-                                <form class="form-inline text-center" method="post" action="{% url 'carrinho:adicionar_ao_carrinho'%}">
+                                <form class="form-inline text-center form-atualiza" method="post" action="{% url 'carrinho:adicionar_ao_carrinho'%}">
                                     {{ item.atualizar_quantidade_form.quantidade }}
                                     {{ item.atualizar_quantidade_form.atualizar }}
                                     <input type="hidden" name="id_produto" value="{{item.id}}"/>
