--- a/vendas/templates/vendas/base.html
+++ b/vendas/templates/vendas/base.html
@@ -23,12 +23,9 @@
         <script src="{% static 'js/produtos.js' %}"></script>
         <script src="{% static 'js/preco.js' %}"></script>
         <script src="{% static 'js/jquery.js' %}" type="text/javascript"></script>
-        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-        <!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-  <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-  <![endif]-->
+        <!-- Bootstrap Core JavaScript -->
+        <script src="{% static 'js/bootstrap.min.js' %}"></script>
+
         <script type="text/javascript">
             jQuery(document).ready(function($) {
                 $.easing.easeInOutExpo = function(x, t, b, c, d) { // definição do efeito que será posteriormente usado no animate
@@ -104,10 +101,6 @@
   </div>
 
 </footer>
-<script src="{% static 'js/jquery.js' %}"></script>
-
-<!-- Bootstrap Core JavaScript -->
-<script src="{% static 'js/bootstrap.min.js' %}"></script>
 
 <!-- Script to Activate the Carousel -->
 <script>
@@ -115,7 +108,15 @@
         interval: 2500 //changes the speed
     })
 </script>
-
+<script type="text/javascript">
+  $(document).ready({
+    $(".form-atualiza").submit(function (e) {
+      e.preventDefault();
+      var unForm = $(this).val();
+      alert(unForm)
+    });
+  });
+</script>
 </body>
 
 </html>
