--- a/vendas/templates/vendas/base2.html
+++ b/vendas/templates/vendas/base2.html
@@ -23,6 +23,7 @@
         <script src="{% static 'js/produtos.js' %}"></script>
         <script src="{% static 'js/preco.js' %}"></script>
         <script src="{% static 'js/jquery.js' %}" type="text/javascript"></script>
+        <script src="{% static 'js/ajax.js' %}" type="text/javascript"></script>
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
@@ -119,7 +120,6 @@
         interval: 2500 //changes the speed
     })
 </script>
-
 </body>
 
 </html>
